--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         min-height: 300px;
     }
 </style>
-
-<textarea id="textarea" onchange="callTest()" >
+<button onclick="callTest();">수행하기</button>
+<textarea id="textarea" >
 </textarea>
 <script
         src="https://code.jquery.com/jquery-3.4.0.min.js"
